# aegis-os

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/agents/: architect.md  developer.md  devops.md  qa-engineer.md  security-auditor.md
.github/workflows/: ci.yml
aegis-core/: Cargo.toml
aegis-core/src/: lib.rs
