[package]
name = "aegis-core"
version = "0.2.0"
edition = "2021"
authors = ["Aegis OS Team"]
description = "Zero-Trust, Local-First Enterprise AI Agent Framework"
license = "MIT"
repository = "https://github.com/11235813213455891442333776109871597/aegis-os"

[lib]
path = "src/lib.rs"

[[bin]]
name = "aegis-server"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "timeout"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"], optional = true }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"], optional = true }

# HTTP client (for local LLM inference and Qdrant)
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }

# Qdrant vector database (optional)
qdrant-client = { version = "1.7", optional = true }

# Async traits
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Concurrent data structures
dashmap = "5.5"

# Security
secrecy = { version = "0.8", features = ["serde"] }

# Futures
futures = "0.3"

# Config
config = { version = "0.14", default-features = false, features = ["toml"] }

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = { version = "0.13", optional = true }

# Auth
jsonwebtoken = { version = "9.2", optional = true }
argon2 = { version = "0.5", optional = true }
validator = { version = "0.16", features = ["derive"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.5"
test-case = "3.3"
tempfile = "3.10"

[features]
default = []
full = ["postgres", "redis", "auth", "metrics", "qdrant"]
postgres = ["sqlx"]
redis = ["dep:redis"]
qdrant = ["qdrant-client"]
auth = ["jsonwebtoken", "argon2", "validator"]
metrics = ["metrics-exporter-prometheus"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 1
